# libpng-for-android

./: local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/test/a3rdpartylibpng/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CppPng.cpp  CppPng.h  CppSurfaceView.cpp  CppSurfaceView.h  libpngTop.cpp  pngrutil.c
app/src/main/java/com/test/a3rdpartylibpng/: MainActivity.java  NativeFunc.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/test/a3rdpartylibpng/: ExampleUnitTest.java
